--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./1-assets/2-css/style.css" type="text/css">
-    <script src="1-ts/lib/index.js"></script>
-    <script src="mySketch.js" type="text/javascript"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js" type="text/javascript"></script> -->
-    <title>Document</title>
+    <meta http-equiv="refresh" content="0; URL=./1-assets/1-ts/" />
 </head>
-
-<body>
-
-</body>
-
 </html>
