--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="./1-assets/1-js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js" type="text/javascript"></script>
+    <style type="text/css" href="1-assets/2-css/style.css"></style>
+    <title>Sketch</title>
 </head>
 <body>
-    
 </body>
 </html>
